IntelHLS/logs/example2_teste1.txt
example/example2_teste1.c:15:12: error: default initialization of an object of const type 'const int'
        const int a;  // const not initialized
                  ^
                    = 0
1 error generated.
HLS FPGA Parse FAILED.
